--- a/templates/coordinator/coordinator_dashboard.html
+++ b/templates/coordinator/coordinator_dashboard.html
@@ -58,10 +58,13 @@
 </head>
 <body>
     <div class="container">
-        <h2>Superuser Dashboard</h2>
-        <h3>There are total {{ length }} Coordinators</h3>
-        <a href="{% url 'add_coordinator' %}" class="btn">Add Coordinator</a>
-        <a href="{% url 'send_invite' %}" class="btn">Send Invitations</a>
+        <h2>Coordinator Dashboard</h2>
+        <h3>There are total {{ length }} Participants</h3>
+
     </div>
+    <form id="my_form" action="{% url 'logout' %}" method="POST">
+             {% csrf_token %}
+            <li><a href="javascript:{}" onclick="document.getElementById('my_form').submit();" class="btn btn-danger">Logout</a></li>
+      </form>
 </body>
 </html>
