--- a/templates/coordinator/coordinator_login.html
+++ b/templates/coordinator/coordinator_login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Superuser Login</title>
+    <title>Coordinator Login</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,8 +58,8 @@
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+                <label for="username">username:</label>
+                <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
