--- a/templates/coordinator/coordinator_login.html
+++ b/templates/coordinator/coordinator_login.html
@@ -51,10 +51,20 @@
             background-color: #0056b3;
         }
     </style>
+{#    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">#}
 </head>
 <body>
     <div class="container">
         <h2>Coordinator Login</h2>
+{#        {% if messages %}#}
+{#            {% for message in messages %}#}
+{#<div class="container-fluid p-0">#}
+{#  <div class="alert {{ message.tags }}" role="alert" >#}
+{#    {{ message }}#}
+{#  </div>#}
+{#</div>#}
+{#{% endfor %}#}
+{#        {% endif %}#}
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
