--- a/templates/coordinator/edit_participant.html
+++ b/templates/coordinator/edit_participant.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<!-- edit_coordinator.html -->
+<h2>Edit Coordinator</h2>
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit" class="btn btn-primary">Save Changes</button>
+  <a href="{% url 'coordinator_dashboard' %}" class="btn btn-secondary">Cancel</a>
+</form>
