--- a/templates/superuser/coordinators_list.html
+++ b/templates/superuser/coordinators_list.html
@@ -28,7 +28,7 @@
   }
 </style>
 <input type="text" id="searchInput" onkeyup="searchTable()" placeholder="Search for coordinators..." />
-
+<a href="{% url 'superuser_dashboard' %}" class="btn btn-secondary">Back to Dashboard</a>
 <table>
   <thead>
     <tr>
