--- a/templates/coordinator/setup_coordinator_account.html
+++ b/templates/coordinator/setup_coordinator_account.html
@@ -53,6 +53,15 @@
     </style>
 </head>
 <body>
+        {% if messages %}
+            {% for message in messages %}
+<div class="container-fluid p-0">
+  <div class="alert {{ message.tags }}" role="alert" >
+    {{ message }}
+  </div>
+</div>
+{% endfor %}
+        {% endif %}
     <div class="container">
         <h2>Coordinator Account Setup</h2>
         <form method="post">
