--- a/templates/superuser/send_invite.html
+++ b/templates/superuser/send_invite.html
@@ -57,6 +57,15 @@
     </style>
 </head>
 <body>
+        {% if messages %}
+            {% for message in messages %}
+<div class="container-fluid p-0">
+  <div class="alert {{ message.tags }}" role="alert" >
+    {{ message }}
+  </div>
+</div>
+{% endfor %}
+        {% endif %}
     <div class="container">
         <h2>Send Invites</h2>
     {% if emails %}
